# level_designer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  dialog.cpp  dialog.h  example.lvl  helperfunctions.cpp  helperfunctions.h  level.cpp  level.h  level_designer.cfg  m.sh  main.cpp  utils.cpp  utils.h
